--- a/style.css
+++ b/style.css
@@ -166,3 +166,58 @@ html {
 	background-color: rgba(102, 73, 255, 0.85);
 	color: #ffffff;
 }
+
+/* Modal */
+
+.modal {
+	width: 500px;
+	margin: 0px auto;
+	padding: 20px;
+	background-color: #fff;
+	border-radius: 2px;
+	box-shadow: 0 2px 8px 3px;
+	transition: all 0.2s ease-in;
+	font-family: Helvetica, Arial, sans-serif;
+	display: block;
+	text-align: center;
+}
+
+.modal>img {
+	width: 150px;
+}
+
+.modal>h1 {
+	font-size: 45px;
+}
+
+.fadeIn-enter {
+	opacity: 0;
+}
+
+.fadeIn-leave-active {
+	opacity: 0;
+	transition: all 0.2s step-end;
+}
+
+.fadeIn-enter .modal,
+.fadeIn-leave-active.modal {
+	transform: scale(1.1);
+}
+
+.overlay {
+	position: fixed;
+	top: 0;
+	left: 0;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	width: 100%;
+	height: 100%;
+	background: #00000094;
+	z-index: 999;
+	transition: opacity 0.2s ease;
+}
+
+.modal strong {
+	font-weight: bold;
+}
